--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.32.2
-scikit-learn==1.4.1.post1
-numpy==1.26.4
-pandas==2.2.1
-matplotlib==3.8.3
-seaborn==0.13.2
-xgboost==2.0.3
-joblib==1.3.2
+streamlit
+scikit-learn
+numpy
+pandas
+matplotlib
+seaborn
+xgboost
+joblib
